# bevy_blur_regions

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  rustfmt.toml
examples/: 2d_egui.rs  bevy_ui.rs  deband_dither.rs  egui.rs  immediate.rs  no_regions.rs  settings.rs  utils.rs
src/: bevy_ui.rs  core.rs  egui.rs  lib.rs  shader.rs  shader.wgsl
