[package]
name = "bevy_blur_regions"
version = "0.5.0"
authors = ["Andrew Bentley <andrew@bentley.codes>"]
edition = "2021"
description = "A Bevy plugin to selectively blur regions of the screen"
repository = "https://github.com/atbentley/bevy_blur_regions"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_render"] }
bevy_egui = { version = "0.31", optional = true }

[features]
all = ["bevy_ui", "egui"]
default = ["bevy_ui"]

# Enable Bevy UI integration
bevy_ui = ["bevy/bevy_ui"]

# Enable egui integration
egui = ["dep:bevy_egui"]

[dev-dependencies]
bevy = { version = "0.15" }

[[example]]
name = "2d_egui"
path = "examples/2d_egui.rs"
required-features = ["egui"]

[[example]]
name = "egui"
path = "examples/egui.rs"
required-features = ["egui"]

[[example]]
name = "settings"
path = "examples/settings.rs"
required-features = ["egui"]
